# scan-line-z-buffer-algorithm

./: CMakeLists.txt  README.md  log.txt  test  test.cpp
assets/: class.drawio
dependency/Log/: log.h
dependency/Log/LogAppender/: logAppender.cpp  logAppender.h
dependency/Log/LogEvent/: logEvent.cpp  logEvent.h
dependency/Log/LogFormatter/: logFormatter.cpp  logFormatter.h
dependency/Log/Logger/: logger.cpp  logger.h
dependency/Log/LoggerManager/: loggerManager.cpp  loggerManager.h
dependency/Thread/: thread.cpp  thread.h
dependency/Thread/Mutex/: mutex.cpp  mutex.h
dependency/Thread/Semaphore/: sem.cpp  sem.h
dependency/utils/: getInfo.cpp  getInfo.h  singleton.h
models/: settings.json
models/cube/: settings.txt
models/spot/: settings.txt
src/: HierarchicalZbuffer.cpp  HierarchicalZbuffer.h  OBJ_Loader.h  OctZbuffer.cpp  OctZbuffer.h  RasterizeAlg.cpp  RasterizeAlg.h  Rasterizer.cpp  Rasterizer.h  ScanLineZbuffer.cpp  ScanLineZbuffer.h  Shader.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  Zbuffer.cpp  Zbuffer.h  main.cpp  test.cpp
src/utils/: AABB.cpp  AABB.h  OctTree.cpp  OctTree.h
tests/: testJson.cpp  testOctTree.cpp  testSimple.cpp
